<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_margin="16dp">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/new_account_title"
              style="@style/Title"/>
    <EditText
            android:id="@+id/etEmail" android:inputType="textEmailAddress" android:maxLines="1"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/margin_top_fields"/>
    <EditText
            android:id="@+id/etUsername" android:inputType="text" android:maxLines="1"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginTop="@dimen/margin_top_fields"/>
    <EditText
            android:id="@+id/etNickname" android:inputType="text" android:maxLines="1"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/nickname"
            android:layout_marginTop="@dimen/margin_top_fields"/>
    <Spinner android:id="@+id/spGender"
             android:layout_width="match_parent" android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_top_fields"/>
    <EditText
            android:id="@+id/etPassword" android:inputType="textPassword" android:maxLines="1"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/margin_top_fields"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btCriarConta" android:text="@string/create_account"
            android:layout_marginTop="@dimen/margin_top_fields"/>


</LinearLayout>