<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_margin="16dp">
    <ImageView android:layout_width="match_parent" android:layout_height="wrap_content"
               android:id="@+id/ivLogoGame" android:src="@drawable/logo_game"
               android:layout_marginTop="20dp"/>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btPlay" android:text="@string/play"
            android:layout_marginTop="20dp"/>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btRanking" android:text="@string/ranking"
            android:layout_marginTop="20dp"/>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btAbout" android:text="@string/about"
            android:layout_marginTop="20dp"/>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btExit" android:text="@string/exit"
            android:layout_marginTop="20dp"/>

</LinearLayout>