<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" android:padding="16dp">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              style="@style/Title" android:text="@string/game_over"/>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/tvTrainerName"
              style="@style/Title" android:text="Trainer name: Satoru"
              android:layout_marginTop="32dp"/>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btPlayAgain" android:text="@string/play_again"
            android:layout_marginTop="32dp"/>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btMainMenu" android:text="@string/main_menu"
            android:layout_marginTop="32dp"/>

</LinearLayout>