<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <ImageView android:id="@+id/ivLogoGame"
               android:layout_width="@dimen/largura_logo_game"
               android:layout_height="@dimen/altura_logo_game"
               android:src="@drawable/logo_game"
               android:layout_marginTop="60dp" android:layout_alignParentTop="true"
               android:layout_marginEnd="105dp" android:layout_alignParentEnd="true"
               android:layout_marginStart="95dp" android:layout_alignParentStart="true"/>

    <ImageView android:layout_width="@dimen/largura_grass_water_fire"
               android:layout_height="@dimen/altura_grass_water_fire"
               android:src="@drawable/grass_water_fire"
               android:layout_marginStart="120dp" android:layout_alignStart="@+id/ivLogoGame"
               android:layout_alignTop="@+id/ivLogoGame" android:layout_marginTop="126dp"/>

    <EditText
            android:id="@+id/etEmail" android:inputType="textEmailAddress" android:maxLines="1"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="80dp" android:layout_below="@+id/ivLogoGame"
            android:layout_alignParentStart="true" android:layout_marginStart="0dp" android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"/>

    <EditText
            android:id="@+id/etPassword" android:inputType="textPassword" android:maxLines="1"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="20dp" android:layout_below="@+id/etEmail"
            android:layout_alignParentStart="true" android:layout_marginStart="0dp" android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"/>

    <Switch android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/swManterLogado" android:text="@string/manter_autenticado" android:layout_marginTop="20dp"
            android:layout_below="@+id/etPassword" android:layout_alignParentStart="true"
            android:layout_marginStart="0dp" android:layout_alignParentEnd="true" android:layout_marginEnd="0dp"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btLogar" android:text="@string/logar"
            android:layout_alignParentStart="true" android:layout_marginStart="0dp"
            android:layout_alignParentEnd="true" android:layout_marginEnd="0dp"
            android:layout_marginTop="20dp" android:layout_below="@+id/swManterLogado"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/btCriarConta" android:text="@string/new_account"
            android:layout_alignParentStart="true" android:layout_marginStart="0dp"
            android:layout_alignParentEnd="true" android:layout_marginEnd="0dp"
            android:layout_marginTop="20dp" android:layout_below="@+id/btLogar"/>
</RelativeLayout>